# ai_linguist

./: .env.sample  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
ai_linguist/: __main__.py
ai_linguist/configs/: english.py  german.py  main.py  obsidian.py  open_ai.py  user.py
ai_linguist/engine/: append_to_list.py  create_note.py  executor.py  find_knowledge.py  get_knowledge.py  poll.py  process_polling.py  validate_knowledge.py
ai_linguist/factory/: get_config.py  get_instuction.py  get_knowledge.py  get_openai.py
ai_linguist/instructions/: engine.py
ai_linguist/tools/: logging.py
